# jingongxiaozi

./: .gitattributes  .gitignore  .gitmodules  README.en.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
docs/: backend-integration-contract.md  duplexkit-integration.md  miniprogram-three-parity.md
docs/design-report/: 金工小子工程训练设计报告.md
docs/releases/: 2026-05-31-precision-mobile.md  2026-06-07-map-structure-release.md
miniprogram/: README.md  project.config.json
miniprogram/miniprogram/: app.js  app.json  app.wxss
models/: 金工.dwg  金工中心模型.3ds  金工中心精确模型.stl
public/map-models/: jingong-fallback.glb  model-manifest.json
qa/: android-map-smoke-v30.md  android-map-smoke-v32.md  android-map-smoke-v33.md  android-map-smoke-v34.md  android-map-smoke-v36.md  miniprogram-smoke-v1.md
qa/screenshots/: console-v35-initial.txt  snapshot-v35-standby.md
scripts/: build-miniprogram-three-vendor.mjs  generate-map-qa-report.mjs  generate-miniprogram-map-data.mjs  generate-model-manifest.mjs  qa-mobile-layout.mjs  slice-asset-sheet.mjs  verify-alignment.mjs  verify-geometry.mjs  verify-map-data.mjs  verify-miniprogram.mjs  verify-model-assets.mjs  verify-routes.mjs
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/backend-bridge/: directives.ts
src/duplexkit/: audio.ts  roomResolver.ts  types.ts  useDuplexKitRealtime.ts
src/miniprogram/: three-vendor-entry.js
tmp/: three-platformize-1.133.3.tgz  threejs-miniprogram-0.0.8.tgz
(+68 files in other folders)
