[package]
name = "jingong-xiaozi"
version = "0.1.0"
description = "金工小子机器人头顶展示与地图导航应用"
authors = ["ZJU Engineering Training Center"]
edition = "2021"

[lib]
name = "jingong_xiaozi_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }

[dependencies]
tauri = { version = "2.8.5", features = [] }
tauri-plugin-opener = "2.5.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
